[package]
authors = ["Alexander Tchepournov"]
name = "rust-ftp"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
name = "ftp_sync"
path = "src/lib.rs"
version = "0.1.0"

[dependencies]
tokio = { features = ["full"], version = "1.15.0" }
async_ftp = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
once_cell = "1.9.0"
ftp-cmd-list-parse = "0.3.1"
